@@ -1,3 +1,7 @@
+## CHANGELOG 1.0.8:
+
+- Fix remix color doesn't affect by `color` prop.
+
 ## CHANGELOG 1.0.5:
 
 - Fix csss color selector.
